<resources>
    <string name="app_name">FantasticGit</string>
    <string name="need_a_new_account">Need a new Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="logout">Logout</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_requests_page">Welcome to Requests Page</string>
    <string name="chat_page">Chat Page</string>
    <string name="friends_page">Friends Page</string>
    <string name="display_name">Display Name</string>
    <string name="hi_there_i_am_using_lapit_chat_app">Hi there! I am using Fantastic Git App</string>
    <string name="change_name">Change Name</string>
    <string name="change_status">Change Status</string>
    <string name="change_image">Change Image</string>

    <string name="biometric_title">Fantastic Git</string>
    <string name="biometric_subtitle">Confirm fingerprint to continue </string>

    <string name="biometric_negative_button_text">CANCEL</string>

</resources>